Fixing generic inference, fixing JavaVersion parse for early access JVMs